--- a/app/src/main/res/layout/popup_window_for_game_action.xml
+++ b/app/src/main/res/layout/popup_window_for_game_action.xml
@@ -9,32 +9,62 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:orientation="horizontal"
         android:gravity="center_horizontal"
-        android:background="#9490ab">
-        <ImageView
+        android:background="#9490ab"
+        android:id="@+id/linear_layout_player_queue_bar">
+
+        <!-- <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_rename"/>
-        <TextView
+            android:src="@drawable/ic_keyboard_arrow_right_black_18dp"
+            android:id="@+id/image_arrow_0"
+            android:layout_gravity="center_vertical" />
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-->"
-            android:textColor="#FFFFFF"
-            android:layout_gravity="center" />
-        <ImageView
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/image_player_icon_0"
+                android:src="@drawable/ic_rename"
+                android:layout_gravity="center_horizontal" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_player_name_0"
+                android:text="無aaaaaaaaaaa"
+                android:maxWidth="45sp"
+                android:minWidth="45sp"
+                android:gravity="center_horizontal"
+                android:maxLines="2" />
+        </LinearLayout>
+       <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_rename"/>
-        <TextView
+            android:src="@drawable/ic_keyboard_arrow_right_black_18dp"
+            android:id="@+id/image_arrow_1"
+            android:layout_gravity="center_vertical" />
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-->"
-            android:textColor="#FFFFFF"
-            android:layout_gravity="center" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_rename"/>
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/image_player_icon_1"
+                android:src="@drawable/ic_rename"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_player_name_1"
+                android:text="player111111"/>
+        </LinearLayout>
+        -->
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
