--- a/app/src/main/res/layout/activity_game_window.xml
+++ b/app/src/main/res/layout/activity_game_window.xml
@@ -1,12 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    tools:context="com.dreamershk.projectshiritori.GameWindow">
 
-    tools:context=".MultiPlayerActivity">
-
-    //Status Bar: score, life, round
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,8 +72,7 @@
         android:layout_height="0dip"
         android:layout_weight="1"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:background="@drawable/cloud">
+        android:paddingRight="10dp">
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -88,7 +86,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:textSize="45sp"
-            android:text="Please re-start."
+            android:text="請稍等。"
             android:visibility="visible"/>
     </RelativeLayout>
 
@@ -116,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="我"
-                android:editable="false"/>
+                android:inputType="none"/>
             <EditText
                 android:id="@+id/et_input"
                 android:layout_height="wrap_content"
@@ -133,5 +131,4 @@
             android:src="@drawable/ic_send_black_36dp"
             android:paddingLeft="3dp"/>
     </LinearLayout>
-
 </LinearLayout>
