--- a/app/src/main/res/layout/game_action_window.xml
+++ b/app/src/main/res/layout/game_action_window.xml
@@ -124,6 +124,11 @@
         </LinearLayout>
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_keyboard_arrow_right_white_18dp"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:id="@+id/iv_return" />
     </LinearLayout>
 </LinearLayout>
