--- a/app/src/main/res/layout/list_item_chat_bubble_sent.xml
+++ b/app/src/main/res/layout/list_item_chat_bubble_sent.xml
@@ -11,7 +11,8 @@
         android:background="@drawable/balloon_outgoing_normal"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/image_profile_icon"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true">
 
         <LinearLayout
             android:id="@+id/linear_layout_chat_bubble"
