--- a/app/src/main/res/layout/rank_item.xml
+++ b/app/src/main/res/layout/rank_item.xml
@@ -2,38 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/rank_item">
-    <TextView android:id="@+id/rank_item_rank"
+    android:layout_height="wrap_content"
+    android:id="@+id/rank_item"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
+    android:gravity="center_vertical">
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:hint="1"
-        android:textSize="20sp"
-        android:layout_marginRight="10dp"
-        android:textColor="#324eff" />
-    <TextView android:id="@+id/rank_item_name"
-        android:layout_width="0dip"
+        android:text="1"
+        android:textSize="35sp"
+        android:id="@+id/txt_ranking_order"
+        android:paddingRight="10dp"
+        android:textColor="#ffffff" />
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/iv_ranking_icon"
+        android:src="@drawable/ic_rename"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PLAYER"
+        android:textSize="25sp"
+        android:id="@+id/txt_ranking_name"
         android:layout_weight="1"
-        android:lines="2"
-        android:textSize="15sp"
-        android:layout_marginRight="10dp"
-        android:hint="無名氏"/>
-    <TextView android:id="@+id/rank_item_round"
+        android:textColor="#ffffff" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:textSize="20sp"
-        android:hint="10"
-        android:layout_marginRight="10dp"
-        android:textColor="#2e9234" />
-    <TextView android:id="@+id/rank_item_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:textSize="20sp"
-        android:hint="10"
-        android:layout_marginRight="10dp"
-        android:textColor="#ff1539" />
+        android:text="20"
+        android:textSize="30sp"
+        android:id="@+id/txt_ranking_score"
+        android:textColor="#ffffff" />
 </LinearLayout>
