--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
             android:layout_weight="1"
             android:text="多人遊戲"
             android:id="@+id/button_multi_game"
-            android:layout_below="@id/button_single_game" />
+            android:layout_below="@id/button_single_game"
+            android:visibility="gone" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="0dp"
