--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,8 +57,14 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="單人遊戲(語音輸入版)"
-            android:id="@+id/button_single_game_with_audio" />
-
+            android:id="@+id/button_single_game_with_audio"
+            android:visibility="gone" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="設定"
+            android:id="@+id/button_setting" />
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
