--- a/app/src/main/res/layout/activity_game_window_with_canva.xml
+++ b/app/src/main/res/layout/activity_game_window_with_canva.xml
@@ -11,49 +11,102 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv_score"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="00"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:textStyle="bold"
-            android:textSize="25dp" />
+        android:orientation="horizontal"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="3dp">
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center_vertical|center">
             <ImageView
                 android:id="@+id/image_life1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_favorite_black_24dp"/>
+                android:src="@drawable/heart1"/>
             <ImageView
                 android:id="@+id/image_life2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_favorite_black_24dp"/>
+                android:src="@drawable/heart2"/>
             <ImageView
                 android:id="@+id/image_life3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_favorite_black_24dp"/>
+                android:src="@drawable/heart3"
+                android:visibility="visible" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/tv_round"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="1"
+            android:orientation="horizontal"
+            android:layout_weight="0"
+            android:gravity="center_vertical|center_horizontal">
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:id="@+id/image_score_hundreds_digit"
+                android:src="@drawable/number_0_36dp"
+                android:rotation="-19"
+                android:layout_marginRight="-12dp" />
+            <ImageView
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:id="@+id/image_score_tens_digit"
+                android:src="@drawable/number_0_36dp"/>
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:id="@+id/image_score_units_digit"
+                android:src="@drawable/number_0_36dp"
+                android:rotation="10"
+                android:layout_marginLeft="-10dp" />
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:typeface="serif"
-            />
+            android:orientation="vertical"
+            android:gravity="center_vertical|center_horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/arrow_navy_48dp"
+                android:alpha="0.2"
+                android:layout_centerVertical="true" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_centerInParent="true">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/image_round_hundreds_digit"
+                    android:src="@drawable/number_dotted_0_24dp"
+                    android:rotation="-14"
+                    android:layout_centerVertical="true" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/image_round_tens_digit"
+                    android:src="@drawable/number_dotted_0_24dp"
+                    android:layout_marginLeft="-5dp"
+                    android:layout_marginRight="-5dp"
+                    android:layout_centerVertical="true" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/image_round_units_digit"
+                    android:src="@drawable/number_dotted_0_24dp"
+                    android:rotation="10"
+                    android:layout_centerVertical="true" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
     </LinearLayout>
 
     //Display remaining time
@@ -66,7 +119,6 @@
         android:layout_height="wrap_content"
         android:paddingTop="3dp"
         android:paddingBottom="3dp"
-        android:background="#E0E0E0"
         android:indeterminate="false"
         android:max="100"
         android:progress="1"
